# Math-Prime-Util

./: CMakeLists.txt  factor.c  test.cpp
.github/workflows/: manual.yml
